syntax="proto3";

import "google/protobuf/empty.proto";

service ProductService {
  rpc AddProduct(stream AddProductRequest) returns (stream google.protobuf.Empty);
}

message AddProductRequest {
  bytes Id = 1;
  string Name = 2;
//  repeated string Tags = 3;
//  bool IsSponsored = 4;
//  bool Adult = 5;
//  Ages Age = 6;
//  Genders Gender = 7;
//  
//  enum Ages {
//      UNKNOWN_AGES = 0;
//      CHILDREN = 1;
//      TEENAGER = 2;
//      ADULT = 3;
//      OLD = 4;
//  }
//  
//  enum Genders {
//    UNKNOWN_GENDER = 0;
//    MALE = 1;
//    FEMALE = 2;
//    NOT_DECIDE = 3;
//  }
}

